--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-source-filesystem": "^1.5.33",
     "gatsby-transformer-remark": "^1.7.40",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-image-lightbox": "^4.6.0"
   },
   "keywords": [
     "gatsby"
